<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ivf"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:src="@drawable/coeur" android:contentDescription="@string/P"/>

    <Button
        android:id="@+id/coeur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:background="#99CCCC"
        android:text="@string/coeur" />



    <Button
        android:id="@+id/banane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:background="#99CCCC"
        android:text="@string/banane" />



    <Button
        android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:background="#99CCCC"
        android:text="@string/chat" />



    <Button
        android:id="@+id/ballon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:background="#99CCCC"
        android:text="@string/ballon" />

</LinearLayout>
